# public

net-box_pre-patch_tracker/net-box_pre-patch_tracker/: urls.py
netbox-plugin/: #setup.py#  setup.py  setup.py~
netbox-plugin/docs/: setup-py_output.txt
patch_tracker/: README.org  README.org~  pyproject.toml  tasks.py
patch_tracker/development/: configuration.py  docker-compose.yml
patch_tracker/patch_tracker/: __init__.py  admin.py
patch_tracker/tests/: test_patch_tracker.py
plugin3/: pyproject.toml  tasks.py
plugin3/development/: Dockerfile  configuration.py  dev.env  docker-compose.yml
plugin3/netbox_animal_sounds/: __init__.py  admin.py~  models.py  navigation.py~  url.py~  urls.py  urls.py~  views.py  views.py~
plugin3/netbox_animal_sounds/migrations/: 0001_initial.py
plugin3/netbox_animal_sounds/templates/: animal.html~
plugin3/netbox_animal_sounds/templates/netbox_animal_sounds/: animal.html
plugin3/patch_tracker/: admin.py  admin.py~  models.py  models.py~  navigation.py  tables.py  urls.py  views.py  views.py~
plugin3/patch_tracker/migrations/: 0001_initial.py  0002_auto_20210125_1755.py  0003_bgppeering.py
plugin3/patch_tracker/templates/: patch.html~
plugin3/patch_tracker/templates/patch_tracker/: patch.html  patch_tracked.html  random.html
