[tool.poetry]
name = "plugin3"
version = "0.1.0"
description = "Dan's NetBox plugin to track pre-patch capacity"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7.9"
black = "^20.8b1"
bandit = "^1.7.0"
invoke = "^1.5.0"
pylint = "^2.6.0"
pylint-django = "^2.4.2"
pydocstyle = "^5.1.1"
yamllint = "^1.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
