[tool.poetry]
name = "plugin3"
version = "0.1.0"
description = "Testing plugin dev-env"
authors = ["dmurphy112 <dev@danielmurphy.email>"]
license = "Apache 2.0"
packages = [{include = "netbox_animal_sounds"},]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"
zipp = "^3.4.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
invoke = "^1.5.0"
pylint = "^2.6.0"
pylint-django = "^2.4.2"
pydocstyle = "^5.1.1"
yamllint = "^1.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
